# MRG_ReportingHUB

./: .gitignore  README.md  STATUS_SUMMARY.md  config_example.py  db_manager.py  example_usage.py  excel_example.py  pyproject.toml  report_config_ui.py  requirements.txt  run_cuso_ram_report.py  run_report.py
config/: .gitkeep  NAMING_CONVENTION.md  README.md  compliance_report_config.json  consolidate_report_default.json  cuso_ram_report_config.json  cuso_ram_report_default.json  kpi_report_default.json
docs/: PROGRESS_UPDATE.md  README.md
examples/: README.md  __init__.py  config_example.py  date_example.py  example_usage.py  excel_example.py
interim_data/: .gitkeep
interim_data/cuso_ram/: .gitkeep
queries/: .gitkeep  Risk Appetite Measure.sql  uiu_missing_data.sql
reports/: MULTI_QUERY_EXAMPLE.py  REPORT_TEMPLATE.py  __init__.py  base_report.py  cuso_ram_report.py  placeholder_reports.py  report_manager.py
reports/cuso_ram/: README.md
scripts/: create_cuso_ram_template.py
templates/: README.md  compliance_report_template.xlsx  consolidate_report_template.xlsx  cuso_ram_report_template.xlsx  kpi_report_template.xlsx
tests/: __init__.py  test_imports.py
utils/: __init__.py  config_manager.py  date_example.py  date_utils.py  db_manager.py  excel_manager.py  filter_utils.py
